--- a/package.json
+++ b/package.json
@@ -41,9 +41,9 @@
     ]
   },
   "devDependencies": {
-    "husky": "^8.0.0",
     "lint-staged": "^13.1.2",
-    "msw": "^1.0.1"
+    "msw": "^1.0.1",
+    "husky": "^8.0.0"
   },
   "jest": {
     "collectCoverageFrom": [
