--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.6",
+    "use-react-router-breadcrumbs": "^4.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -41,9 +42,9 @@
     ]
   },
   "devDependencies": {
+    "husky": "^8.0.0",
     "lint-staged": "^13.1.2",
-    "msw": "^1.0.1",
-    "husky": "^8.0.0"
+    "msw": "^1.0.1"
   },
   "jest": {
     "collectCoverageFrom": [
