--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -8,6 +8,6 @@ sonar.sources=./src
 sonar.sourceEncoding=UTF-8
 
 sonar.test.inclusions=src/**/*.test.js, src/**/*.test.jsx
-sonar.coverage.exclusions=src/index.jsx, src/setupTests.js, src/reportWebVitals.js, src/styles/GlobalStyle.jsx,src/components/App/__snapshots__/*.snap
+sonar.coverage.exclusions=src/index.jsx, src/setupTests.js, src/reportWebVitals.js, src/styles/GlobalStyles.jsx,src/components/App/__snapshots__/*.snap
 
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
