--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -18,3 +18,4 @@ jobs:
         run: npm test
         env:
           REACT_APP_API_URL: ${{secrets.REACT_APP_API_URL}}
+          REACT_APP_API_URL_CART: ${{secrets.REACT_APP_API_URL_CART}}
